--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@
 /* ********************************* */
 
 .characters-section {
-  background-color: #fff9e8;
+  background-color: var(--background-light);
 }
 
 /* .characters-section .heading-secondary {
@@ -185,9 +185,9 @@
   height: 100vh;
 }
 
-.faq-section .heading-secondary {
+/* .faq-section .heading-secondary {
   margin-bottom: 4.8rem;
-}
+} */
 
 .accordion {
   display: flex;
@@ -210,8 +210,8 @@
 }
 
 .question {
-  font-size: 2.4rem;
-  line-height: 1.2;
+  /* font-size: 2.4rem;
+  line-height: 1.2; */
   cursor: pointer;
 }
 
@@ -263,5 +263,84 @@
 }
 
 .active .question-number {
-  color: #7e620d;
+  color: var(--text-default);
+}
+
+/* AUTHORS / CREATORS SECTION  */
+.authors-section {
+  background-color: var(--background-light);
+}
+
+.overflow-border {
+  height: 45rem;
+  max-width: 100rem;
+  border: 3px solid red;
+  display: flex;
+  align-items: center;
+}
+
+.carousel {
+  height: 37.5rem;
+  width: 100rem;
+  display: inline-block;
+  border: 3px solid green;
+  /* border: 4px solid #fcc419; */
+  border-radius: 11px;
+  background-color: #fff;
+  position: relative;
+}
+
+.slide {
+  padding: 0 6.4rem 0 12.8rem;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  column-gap: 7.8 !important;
+}
+
+.author-img-box {
+  height: 100%;
+}
+
+.author-img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.2);
+  border-radius: var(--radius-main);
+  border-radius: 30px;
+}
+
+.author-text {
+  padding-right: 3.2rem;
+  align-self: center;
+}
+
+.biograpy {
+  font-size: 1.8rem;
+  line-height: 1.6;
+  margin-top: 2.8rem;
+}
+
+.author-btn {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+}
+
+.author-icon {
+  width: 4.8rem;
+  height: 4.8rem;
+}
+
+.author-btn-left {
+  top: 50%;
+  left: 0%;
+  transform: translateY(-50%);
+}
+
+.author-btn-right {
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0%;
 }
